@@ -7011,4 +7011,6 @@
 	  (2014-3-18).
 	* arch/arm/Kconfig:  Improved documentation of the use of the
 	  BASEPRI register from Vijay Kumar (2014-3-19).
+	* include/nuttx/i2c.h:  More typo fixes from Vijay Kumar (2014-3-19).
+
 
